--- a/PyCitySchools/mainPyCitySchools.ipynb
+++ b/PyCitySchools/mainPyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 234,
    "id": "3aff255e",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 235,
    "id": "570ecd02",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
        "max    3.124928e+06  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 236,
    "id": "a6bef9ef",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 237,
    "id": "f1450636",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "15"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 238,
    "id": "7bc65779",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "Name: Student ID, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 239,
    "id": "d481e1d9",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "39170"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 240,
    "id": "a3080f21",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 241,
    "id": "60da316a",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "24649428.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 242,
    "id": "cdcb9584",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 243,
    "id": "46534aae",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 244,
    "id": "601e1c5c",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 245,
    "id": "4eb38cf3",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 246,
    "id": "68c7bca6",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 247,
    "id": "093d6724",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 248,
    "id": "fff0e0b8",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 249,
    "id": "25b259c2",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "0               81.87784       74.980853          85.805463         65.172326  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 250,
    "id": "66df9d6c",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 251,
    "id": "d0477066",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "Name: school_name, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 252,
    "id": "81fb5d84",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 253,
    "id": "637b4907",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
        "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 254,
    "id": "7af3d603",
    "metadata": {},
    "outputs": [],
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 255,
    "id": "3c88049c",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1019,7 @@
        "[29370 rows x 11 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 256,
    "id": "55357918",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
        "Name: math_score, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 257,
    "id": "56b5afb4",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1095,7 @@
        "Name: reading_score, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 258,
    "id": "c2896c2c",
    "metadata": {},
    "outputs": [
@@ -1336,7 +1336,7 @@
        "[25528 rows x 11 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 259,
    "id": "e3a7c1b9",
    "metadata": {},
    "outputs": [],
@@ -1364,8 +1364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "576271e1",
+   "execution_count": 260,
+   "id": "d5a5298b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 261,
    "id": "749f2a2e",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1666,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 262,
    "id": "cd8a6f31",
    "metadata": {},
    "outputs": [
@@ -1809,7 +1809,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 263,
    "id": "84d7a094",
    "metadata": {},
    "outputs": [
@@ -1953,7 +1953,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 264,
    "id": "256c98b1",
    "metadata": {},
    "outputs": [
@@ -2143,7 +2143,7 @@
        "Wright High School          83.644986  "
       ]
      },
-     "execution_count": 189,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 265,
    "id": "a8489bb5",
    "metadata": {},
    "outputs": [
@@ -2362,7 +2362,7 @@
        "Wright High School             84.156322          84.073171  "
       ]
      },
-     "execution_count": 193,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2402,8 +2402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "id": "fc81eece",
+   "execution_count": 266,
+   "id": "6298ad7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2414,8 +2414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "3b818433",
+   "execution_count": 267,
+   "id": "77cadea2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2426,8 +2426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "5ae009f7",
+   "execution_count": 268,
+   "id": "5ceb22e0",
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2750,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2763,8 +2763,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "id": "e618a679",
+   "execution_count": 269,
+   "id": "ffb0db6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2778,8 +2778,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "4d28b888",
+   "execution_count": 270,
+   "id": "5fe43fc9",
    "metadata": {},
    "outputs": [
     {
@@ -2878,7 +2878,7 @@
        "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 179,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2897,8 +2897,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "id": "050e20c4",
+   "execution_count": 271,
+   "id": "65d72b22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2909,8 +2909,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "3d409134",
+   "execution_count": 272,
+   "id": "7feeec96",
    "metadata": {},
    "outputs": [
     {
@@ -3233,7 +3233,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3248,8 +3248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "987e8126",
+   "execution_count": 273,
+   "id": "2f2fb38a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3263,8 +3263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "id": "a7bcdf69",
+   "execution_count": 274,
+   "id": "881950be",
    "metadata": {},
    "outputs": [
     {
@@ -3346,7 +3346,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 198,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3367,17 +3367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f4d084d",
+   "execution_count": 275,
+   "id": "7a4fbaab",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Group the per_school_summary DataFrame by \"School Type\" and average the results.\n",
-    "type_math_scores = \n",
-    "type_reading_scores = \n",
-    "type_passing_math = \n",
-    "type_passing_reading = \n",
-    "type_overall_passing = \n",
+    "type_math_scores = per_school_summary.groupby([\"School Type\"]).mean()#[\"Average Math Score\"]\n",
+    "type_reading_scores = per_school_summary.groupby([\"School Type\"]).mean()#[\"Average Reading Score\"]\n",
+    "type_passing_math = per_school_summary.groupby([\"School Type\"]).mean()#[\"% Passing Math\"]\n",
+    "type_passing_reading = per_school_summary.groupby([\"School Type\"]).mean()#[\"% Passing Reading\"]\n",
+    "type_overall_passing = per_school_summary.groupby([\"School Type\"]).mean()#[\"% Overall Passing\"]\n",
     "\n",
     "# Use the code provided to select new column data\n",
     "average_math_score_by_type = type_math_scores[\"Average Math Score\"]\n",
@@ -3386,6 +3386,103 @@
     "average_percent_passing_reading_by_type = type_passing_reading[\"% Passing Reading\"]\n",
     "average_percent_overall_passing_by_type = type_overall_passing[\"% Overall Passing\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "id": "44521669",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_avg_math_reading_scores = pd.merge(average_math_score_by_type, average_reading_score_by_type, how=\"left\", on=\"School Type\")\n",
+    "type_avg_percent_passing_mr = pd.merge(average_percent_passing_math_by_type, average_percent_passing_reading_by_type, how=\"left\", on=\"School Type\")\n",
+    "type_avg_pass = pd.merge(type_avg_math_reading_scores, type_avg_percent_passing_mr, how=\"left\", on=\"School Type\")\n",
+    "complete_type_avg = pd.merge(type_avg_pass, average_percent_overall_passing_by_type, how=\"left\", on=\"School Type\")\n",
+    "type_summary = complete_type_avg\n",
+    "type_summary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54ae4c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
